Fix: ExitButton z-index

--- a/src/components/AcidRain/AcidRainModal/index.css
+++ b/src/components/AcidRain/AcidRainModal/index.css
@@ -178,4 +178,5 @@
   right: 20px;
   width: 30px;
   cursor: pointer;
+  z-index: 99;
 }
